--- a/WMS/Views/Theme/Modern/TenantDepartment/_TenantDepartmentList.cshtml
+++ b/WMS/Views/Theme/Modern/TenantDepartment/_TenantDepartmentList.cshtml
@@ -43,7 +43,7 @@
                 if (!string.IsNullOrEmpty(path))
                 {
 
-                   ViewContext.Writer.Write("<img src='" + path + "' style='height:30px;width:30px'>");
+                   ViewContext.Writer.Write("<img src='" + path + "'style='max-height:120px;width:200px'>");
                 }
             });
         });
