--- a/WMS/Views/Theme/Default/ProductManufacturers/_ProductManufacturerList.cshtml
+++ b/WMS/Views/Theme/Default/ProductManufacturers/_ProductManufacturerList.cshtml
@@ -43,7 +43,7 @@
                 var path = (string)DataBinder.Eval(m.DataItem, "ImagePath");
                 if (!string.IsNullOrEmpty(path))
                 {
-                    ViewContext.Writer.Write("<img src='" + path + "' style='height:30px;width:30px'>");
+                    ViewContext.Writer.Write("<img src='" + path + "'style='max-height:120px;width:200px'>");
                     //ViewContext.Writer.Write("<img style='width:100%' src='" + path + "'/>");
                 }
             });
