--- a/WMS/Views/Theme/Default/WebsiteNavigations/_NavigationList.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/_NavigationList.cshtml
@@ -35,7 +35,7 @@
                         if (!string.IsNullOrEmpty(Logo))
                         {
 
-                            ViewContext.Writer.Write("<img src='" + Logo + "' style='height:30px;width:30px'>");
+                            ViewContext.Writer.Write("<img src='" + Logo + "'style='max-height:120px;width:200px'>");
                         }
                     });
                 });
@@ -50,7 +50,7 @@
                         if (!string.IsNullOrEmpty(Logo))
                         {
 
-                            ViewContext.Writer.Write("<img src='" + Logo + "' style='height:30px;width:30px'>");
+                            ViewContext.Writer.Write("<img src='" + Logo + "'style='max-height:120px;width:200px'>");
                         }
                     });
                 });
