--- a/WMS/Views/Theme/Default/WebsiteSliders/_SliderList.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/_SliderList.cshtml
@@ -37,7 +37,7 @@
                 if (!string.IsNullOrEmpty(Logo))
                 {
 
-                    ViewContext.Writer.Write("<img src='" + Logo + "' style='height:30px;width:30px'>");
+                    ViewContext.Writer.Write("<img src='" + Logo + "'style='max-height:120px;width:200px'>");
                 }
             });
         });
