--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_HorizontalNavbarPartial.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Ganedata.Core.Entities.Domain
-@model List<Ganedata.Core.Entities.Domain.TenantDepartments>
-
-
+@using Ganedata.Core.Entities.Enums;
+@model List<Ganedata.Core.Entities.Domain.WebsiteNavigation>
 
 <div class="d-lg-none horizontal-menu">
     <div class="row no-f-wrap">
@@ -48,90 +47,102 @@
         </span>
         <ul class='core-menu'>
 
-            @foreach (var item in Model)
+            @foreach (var item in Model.Where(x => x.ParentId == null))
             {
+                var level1 = Model.Where(x => x.ParentId == item.Id).ToList();
+
                 <li>
-                    <a class="department-a-tag" href="@Url.Action("list", "Products", new { department = item.DepartmentName })">
-                        @item.DepartmentName
-                        @if (item.ProductGroups.Count > 0)
-                        {
-                            <span class='toggle'></span>
-                        }
-                    </a>
-                    @{
-
-                        var groupDepartment = item.ProductGroups.Where(u => u.IsDeleted != true).ToList();
-                        <ul class='dropdown'>
-                            @for (int i = 0; i < groupDepartment.Count; i += 3)
+                    @if (item.Type == WebsiteNavigationType.Blank)
+                    {
+                        <a class="department-a-tag" href="#">
+                            @item.Name
+                            @if (level1.Any())
                             {
-                                <div>
-                                    @if (groupDepartment.ElementAtOrDefault(i) != null)
+                                <span class="toggle"></span>
+                            }
+                        </a>
+                    }
+                    else if (item.Type == WebsiteNavigationType.Content)
+                    {
+                        <a class="department-a-tag" href="@Url.Action("Index", "Home", new { page = item.ContentPageId })">
+                            @item.Name
+                            @if (level1.Any())
+                            {
+                                <span class="toggle"></span>
+                            }
+                        </a>
+                    }
+                    else
+                    {
+                        <a class="department-a-tag" href="@Url.Action("list", "Products", new { category = item.Name })">
+                            @item.Name
+                            @if (level1.Any())
+                            {
+                                <span class="toggle"></span>
+                            }
+                        </a>
+                    }
+                    @{
+                        <ul class='dropdown'>
+                            @foreach (var item1 in level1)
+                            {
+                                var level2 = Model.Where(x => x.ParentId == item1.Id).ToList();
+
+                                <li>
+                                    @if (item1.Type == WebsiteNavigationType.Blank)
                                     {
-
-                                        <li>
-                                            <a href="@Url.Action("list", "Products", new { group = groupDepartment[i].ProductGroup,department = item.DepartmentName })">
-                                                @groupDepartment[i].ProductGroup
-                                                @if (groupDepartment[i].ProductCategories.Count > 0)
-                                                {
-                                                    <span class='toggle2'></span>
-                                                }
-                                            </a>
-                                            <ul class='dropdown2'>
-                                                @foreach (var categories in groupDepartment[i].ProductCategories)
-                                                {
-                                                    <li><a href="@Url.Action("list", "Products", new { group = groupDepartment[i].ProductGroup,department = item.DepartmentName,values="TypeS-"+categories.ProductCategoryName.Replace(" ", "_").Replace(",", "^")})"> @categories.ProductCategoryName</a> </li>
-                                                }
-                                            </ul>
-                                        </li>
-
-
+                                        <a class="department-a-tag" href="#">
+                                            @item1.Name
+                                            @if (level2.Any())
+                                            {
+                                                <span class="toggle"></span>
+                                            }
+                                        </a>
                                     }
-                                    @if (groupDepartment.ElementAtOrDefault(i + 1) != null)
+                                    else if (item1.Type == WebsiteNavigationType.Content)
                                     {
-
-                                        <li>
-                                            <a href="@Url.Action("list", "Products", new { group = groupDepartment[i + 1].ProductGroup,department = item.DepartmentName })">
-                                                @groupDepartment[i + 1].ProductGroup
-                                                @if (groupDepartment[i + 1].ProductCategories.Count > 0)
-                                                {
-                                                    <span class='toggle2'></span>
-                                                }
-                                            </a>
-                                            <ul class='dropdown2'>
-                                                @foreach (var categories in @groupDepartment[i + 1].ProductCategories)
-                                                {
-                                                    <li><a href="@Url.Action("list", "Products", new { group = groupDepartment[i + 1].ProductGroup,department = item.DepartmentName, values="TypeS-"+categories.ProductCategoryName.Replace(" ", "_").Replace(",", "^")})">@categories.ProductCategoryName</a> </li>
-                                                }
-                                            </ul>
-                                        </li>
-
+                                        <a class="department-a-tag" href="@Url.Action("Index", "Home", new { page = item1.ContentPageId })">
+                                            @item1.Name
+                                            @if (level2.Any())
+                                            {
+                                                <span class="toggle"></span>
+                                            }
+                                        </a>
                                     }
-                                    @if (groupDepartment.ElementAtOrDefault(i + 2) != null)
+                                    else
                                     {
-
-                                        <li>
-                                            <a href="@Url.Action("list", "Products", new { group = groupDepartment[i + 2].ProductGroup,department = item.DepartmentName })">
-                                                @groupDepartment[i + 2].ProductGroup
-                                                @if (groupDepartment[i + 2].ProductCategories.Count > 0)
-                                                {
-                                                    <span class='toggle2'></span>
-                                                }
-                                            </a>
-                                            <ul class='dropdown2'>
-                                                @foreach (var categories in groupDepartment[i + 2].ProductCategories)
-                                                {
-                                                    <li><a href="@Url.Action("list", "Products", new { group = groupDepartment[i + 2].ProductGroup,department = item.DepartmentName,values="TypeS-"+categories.ProductCategoryName.Replace(" ", "_").Replace(",", "^") })"> @categories.ProductCategoryName</a> </li>
-                                                }
-                                            </ul>
-                                        </li>
-
+                                        <a class="department-a-tag" href="@Url.Action("list", "Products", new { category = item1.Name })">
+                                            @item1.Name
+                                            @if (level2.Any())
+                                            {
+                                                <span class="toggle"></span>
+                                            }
+                                        </a>
                                     }
-                                </div>
+
+                                    <ul class='dropdown2'>
+                                        @foreach (var item2 in level2)
+                                        {
+                                            <li>
+                                                @if (item2.Type == WebsiteNavigationType.Blank)
+                                                {
+                                                    <a class="department-a-tag" href="#">@item2.Name</a>
+                                                }
+                                                else if (item2.Type == WebsiteNavigationType.Content)
+                                                {
+                                                    <a class="department-a-tag" href="@Url.Action("Index", "Home", new { page = item2.ContentPageId })">@item2.Name</a>
+                                                }
+                                                else
+                                                {
+                                                    <a href="@Url.Action("list", "Products", new { category = item2.Name})"> @item2.Name</a>
+                                                }
+                                            </li>
+                                        }
+                                    </ul>
+                                </li>
                             }
                         </ul>
                     }
-
-
                 </li>
             }
 
