--- a/WMS/Views/Theme/Default/TenantWebsites/_TenantWebSiteList.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/_TenantWebSiteList.cshtml
@@ -2,8 +2,8 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "TenantWebSiteGridView";
-        settings.CallbackRouteValues = new { Controller = "TenantWebsites", Action = "_TenantWebSiteList" };
+        settings.Name = "WebsiteVouchersGridView";
+        settings.CallbackRouteValues = new { Controller = "WebsiteVouchers", Action = "_TenantWebSiteList" };
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.Settings.ShowHeaderFilterButton = false;
         settings.SettingsPopup.HeaderFilter.Height = 200;
@@ -50,8 +50,13 @@
             ("<a href='" + Url.Action("Index", "ProductsWebsitesMaps", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-list' title='Product Website Map'></i></a>  " +
              "<a href='" + Url.Action("Index", "WebsiteSliders", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-sliders' title='Website Slider List'></i></a>  " +
              "<a href='" + Url.Action("Index", "WebsiteNavigations", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-link' title='Website Navigation List'></i></a>  " +
-             "<a href='" + Url.Action("Index", "WebsiteContentPages", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-file' title='Website Content Pages List'></i></a>"
-            );
+             "<a href='" + Url.Action("Index", "WebsiteContentPages", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-file' title='Website Content Pages List'></i></a>"+
+             "<a href='" + Url.Action("Index", "WebsiteShippingRules", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-list' title='Website Shipping Rules List'></i></a>" +
+             "<a href='" + Url.Action("Index", "WebsiteVouchers", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-money' title='Website Vouchers List'></i></a>"+
+             "<a href='" + Url.Action("Index", " WebsiteDiscountCodes", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-tags' title='Website Discount List'></i></a>"
+
+
+ );
 
         });
         settings.Columns.Add(Column);
