--- a/WMS/Views/Theme/Default/WebsiteNavigations/Edit.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/Edit.cshtml
@@ -157,7 +157,7 @@
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.ParentId, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.DropDownListFor(model => model.ParentId, ViewBag.ParentId as SelectList, "Select Parent", htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.ParentId, ViewBag.ParentIds as SelectList, "Select Parent", htmlAttributes: new { @class = "form-control" })
 
                     @Html.ValidationMessageFor(model => model.ParentId, "", new { @class = "text-danger" })
                 </div>
